alignment issues

--- a/app/assets/stylesheets/sass/dri/_dri.scss
+++ b/app/assets/stylesheets/sass/dri/_dri.scss
@@ -3332,8 +3332,6 @@ dd.dri_licence{
 }
 
 a.dri_help_popover {
-    padding-left: 5px;
-
     .dri_licence_logo {
         height: 2em;
         vertical-align: bottom;
